--- a/routesearch/templates/routesearch/fares.html
+++ b/routesearch/templates/routesearch/fares.html
@@ -1,9 +1,9 @@
 <div style="width:800px;">
   <h2>Minimum Airline Fare :
     <span style="text:20px;">{{ fare1 }}&nbsp;{{currency1}}&nbsp;+&nbsp;{{ fare2 }}&nbsp;{{currency2}}</span>
-    &nbsp;=&nbsp;{{ total }}&nbsp;{{currency1}}
+    &nbsp;
     <span id="fare" style="color:red">
-
+      =&nbsp;{{ total }}&nbsp;{{currency1}}
     </span>
   </h2>
   <br>
